--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -4,29 +4,26 @@
   <dd><%= @apply.feedback_headhunter %></dd>
 <% end %>
 
-<p><%= I18n.t('apply_to') %> <%= link_to @apply.job.title, @apply.job %></p>
-<dt><%= Apply.human_attribute_name(:id) %></dt>
-<dd><%= @apply.id %></dd>
-<dt><%= Apply.human_attribute_name(:user_id) %></dt> 
-<dd><%= @apply.user_id %></dd>
-<dt><%= User.human_attribute_name(:email) %></dt> 
-<dd><%= @apply.user.email %></dd>
+<div>
+  <p><%= I18n.t('apply_to') %> <%= link_to @apply.job.title, @apply.job %></p>
+  <p><%= Apply.human_attribute_name(:id) %>: <%= @apply.id %></p>
+</div>
+
+<div>
+  <p>
+    <%= link_to I18n.t('view_proposal'), apply_proposal_path(@apply, @apply.proposal.id) if @apply.proposal %>  
+    <% if headhunter_signed_in? %>
+      <%= link_to I18n.t('send_proposal'), new_apply_proposal_path(apply_id = @apply.id) unless @apply.proposal %>
+      <%= link_to I18n.t('feedback'), edit_apply_path %>
+      <%= link_to I18n.t('star_apply'), stars_path(apply_id: @apply.id, profile_id: @apply.user_id, headhunter_id: current_headhunter.id), method: :post %>
+      <%= link_to I18n.t('view_profile'), profile_path(@apply.user_id) %>    
+    <% end %>
+  </p>
+</div>
 
 <div>
   <%= button_to I18n.t('delete'), apply_path(@apply), 
                                     method: :delete,
                                     data: { confirm: I18n.t('sure') } %>
-  <strong><%= link_to I18n.t('view_proposal'), apply_proposal_path(@apply, @apply.proposal.id) if @apply.proposal %></strong>  
 </div>                           
-
-
-<% if headhunter_signed_in? %>
-  <div>  
-    <%= link_to I18n.t('view_profile'), profile_path(@apply.user_id) %>  
-    <%= link_to I18n.t('star_apply'), stars_path(apply_id: @apply.id, profile_id: @apply.user_id, headhunter_id: current_headhunter.id), method: :post %>
-    <%= link_to I18n.t('feedback'), edit_apply_path %>
-    <%= link_to I18n.t('send_proposal'), new_apply_proposal_path(apply_id = @apply.id) %>
-  </div>
-<% end %>
-
 
