--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,23 +1,6 @@
 <h4><%= @job.title %></h4>
 
-<dt><%= Job.human_attribute_name(:code) %></dt> 
-<dd><%= @job.code %></dd>
-<dt><%= Job.human_attribute_name(:job_status) %></dt>
-<dd><%= I18n.t(@job.job_status) %></dd>
-<dt><%= Job.human_attribute_name(:date) %></dt> 
-<dd><%= I18n.localize(@job.date) %></dd>
-<dt><%= Job.human_attribute_name(:description) %></dt>
-<dd><%= @job.description %></dd>
-<dt><%= Job.human_attribute_name(:skills) %></dt>
-<dd><%= @job.skills %></dd>
-<dt><%= Job.human_attribute_name(:salary) %></dt>
-<dd><%= @job.salary %></dd>
-<dt><%= Job.human_attribute_name(:company) %></dt>
-<dd><%= @job.company %></dd>
-<dt><%= Job.human_attribute_name(:level) %></dt>
-<dd><%= @job.level %></dd>
-<dt><%= Job.human_attribute_name(:place) %></dt>
-<dd><%= @job.place %></dd>
+<%= render partial: "layouts/show_atributtes", locals: {what_to_show: @job} %>
 
 <%= link_to I18n.t('apply'), applies_path(job_id: @job.id, user_id: current_user.id), method: :post if user_signed_in? %>
 
