--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,10 +4,7 @@
     <div>
       <p><%= I18n.localize(comment.datetime, format: :short) %></p>
       <p><%= comment.body %></p>
-      <p><%= link_to I18n.t('edit'), edit_comment_path(comment) %>
-      <%= button_to I18n.t('delete'), comment_path(comment), 
-                                method: :delete, 
-                                data: { confirm: I18n.t('sure') } %></p>
+      <p><%= render partial: "layouts/headhunter_edit_delete_instance", locals: {what_to_edit_delete: comment }%></p>
     </div>
   <% end %>
 <% end %> 
