--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -4,19 +4,17 @@
 
 <%= link_to I18n.t('apply'), applies_path(job_id: @job.id, user_id: current_user.id), method: :post if user_signed_in? %>
 
+<br>
+
+<%= render partial: "layouts/headhunter_edit_delete_instance", locals: {what_to_edit_delete: @job} %>
+
 <% if headhunter_signed_in? %>
-  <div>
-    <%= link_to I18n.t('edit'), edit_job_path(@job) %>
-    <%= button_to I18n.t('delete'), job_path(@job),
-                              method: :delete,
-                              data: { confirm: I18n.t('sure') } %>
-  </div>
   <div>
     <%= render 'jobs/select_status' %>
   </div>
   <div>
     <%= render 'jobs/applies' %>
-  </div>   
+  </div>
 <% end %>
 
 
