--- a/app/views/jobs/_indexed_jobs.erb
+++ b/app/views/jobs/_indexed_jobs.erb
@@ -1,6 +1,2 @@
-<% if @jobs.any? %>  
-  <% @jobs.each do |j| %>
-    <%= render j %>       
-  <% end %>
-<% end %>  
+<%= render @jobs if @jobs.any? %>
 <p><%= I18n.t('no_jobs') if @jobs.empty? %></p>
