--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,16 +1,6 @@
 <h4><%= I18n.t('profiles') %></h4>
 
-<% if @profiles.any? %>
-    <% @profiles.each do |profile| %>
-      <p>
-        <%= link_to profile do %>
-          <%= profile.id %>
-          <%= profile.social_name.blank? ? profile.name : profile.social_name %>  
-        <% end %>
-      </p>
-    <% end %>
-<% else %>
-    <p><%= I18n.t('no_profiles') %></p>
-<% end %>
+<%= render @profiles if @profiles.any? %>
+<p><%= I18n.t('no_profiles') if @profiles.empty? %></p>
 
 <%= paginate @profiles %>
