--- a/app/views/stars/index.html.erb
+++ b/app/views/stars/index.html.erb
@@ -1,22 +1,6 @@
 <h4><%= I18n.t('stars') %></h4>
 
-<% if @stars.any? %>
-  <% @stars.each do |star| %>
-    <% if star.headhunter_id == current_headhunter.id %>
-      <p>
-        <% star.profile.social_name.blank? ? star_name = star.profile.name : star_name = star.profile.social_name %>
-        <%= link_to star_name, profile_path(star.profile.user_id) %><br>
-        <%= Apply.human_attribute_name(:id) %>: <%= link_to star.apply_id, apply_path(star.apply_id) %> 
-      </p>
-      <%= button_to I18n.t('delete'), star_path(star), 
-                                  method: :delete,
-                                  data: { confirm: I18n.t('sure') } %>
-    <% else %>
-      <p><%= I18n.t('no_stars') %></p>   
-    <% end %>
-  <% end %>  
-<% end %>  
-
-<p><%= I18n.t('no_stars') if @stars.empty? %></p>  
+<%= render @stars if @stars.any? %>
+<p><%= I18n.t('no_stars') if @stars.empty? %></p>
 
 <%= paginate @stars %>
