--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -9,7 +9,7 @@
   <p><%= Apply.human_attribute_name(:id) %>: <%= @apply.id %></p>
   <p>
     <%= Profile.human_attribute_name(:name) %>: 
-    <%= @profile.social_name.blank? ? @profile.name : @profile.social_name %>
+    <%= name_to_exibit(@profile) %>
   </p>
 </div>
 
