--- a/app/views/profiles/show.erb
+++ b/app/views/profiles/show.erb
@@ -1,19 +1,19 @@
-<h4><%= @profile.social_name.blank? ? @profile.name : @profile.social_name %></h4>  
-  
-<dt><%= Profile.human_attribute_name(:birthdate) %></dt> 
+<h4><%= name_to_exibit(@profile) %></h4>
+
+<dt><%= Profile.human_attribute_name(:birthdate) %></dt>
 <dd><%= I18n.l(@profile.birthdate, format: :default) %></dd>
-<dt><%= Profile.human_attribute_name(:description) %></dt> 
+<dt><%= Profile.human_attribute_name(:description) %></dt>
 <dd><%= @profile.description %></dd>
 <dt><%= Profile.human_attribute_name(:educacional_background) %></dt>
 <dd><%= @profile.educacional_background %></dd>
-<dt><%= Profile.human_attribute_name(:experience) %></dt> 
+<dt><%= Profile.human_attribute_name(:experience) %></dt>
 <dd><%= @profile.experience %></dd>
 
 <%= link_to I18n.t('edit'), edit_profile_path(@profile) if user_signed_in?%>
 
 <% if headhunter_signed_in? %>
   <br>
-  <div>  
+  <div>
     <%= render partial: 'comments/comment', locals: { comment: @comment } %>
     <%= render partial: 'comments/form', locals: { comment: @comment } %>
   </div>
