--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -1,7 +1,7 @@
 <h4><%= I18n.t('applies') %></h4>
 
 <%= render @applies if @applies.any? %>
-<p><%= I18n.t('no_applies') if @applies.empty? %></p>
+<%= I18n.t('no_applies') if @applies.empty? %>
 
 <%= paginate @applies %>
 
