--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,15 @@
 <b><%= I18n.t('your_comments') if headhunter_signed_in? %></b>
 <% @comments.each do |comment| %>
-  <% if comment.headhunter_id == current_headhunter.id %>    
+  <% if comment.headhunter_id == current_headhunter.id %>
     <div>
-      <p><%= I18n.localize(comment.datetime, format: :short) %></p>
+      <p><%= I18n.localize(comment.updated_at, format: :short) %></p>
       <p><%= comment.body %></p>
-      <p><%= render partial: "layouts/headhunter_edit_delete_instance", locals: {what_to_edit_delete: comment }%></p>
+      <p><%= link_to I18n.t('edit'), edit_profile_comment_path(comment) %></p>
+      <div>
+        <%= button_to I18n.t('delete'), profile_comment_path(comment), 
+                                    method: :delete,
+                                    data: { confirm: I18n.t('sure') } %>
+      </div>
     </div>
   <% end %>
 <% end %>
