--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,7 +1,7 @@
 <% if @profile.errors.any? %>
   <% @profile.errors.full_messages.each do |message|%>
     <p><%= message %></p>
-  <% end %>  
+  <% end %>
 <% end %>
 
 <%= form_with model: profile do |form| %>
@@ -19,20 +19,30 @@
     <%= form.label :birthdate %><br>
     <%= form.date_field :birthdate %>
   </div>
-  
+
   <div>
     <%= form.label :description %><br>
     <%= form.text_area :description %>
   </div>
-  
+
   <div>
     <%= form.label :educacional_background %><br>
     <%= form.text_area :educacional_background %>
   </div>
-  
+
   <div>
     <%= form.label :experience %><br>
     <%= form.text_area :experience %>
+  </div>
+
+  <div>
+    <%= form.label :country_id %><br>
+    <%= form.select :country_id, Country.all.map { |c| [c.acronym, c.id] }  %>
+  </div>
+
+  <div>
+    <%= form.label :city %><br>
+    <%= form.text_field :city %>
   </div>
 
   <div>
