--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -6,42 +6,42 @@
 
 <%= form_with model: profile do |form| %>
   <div>
-    <%= form.label :name %><br>
+    <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
 
   <div>
-    <%= form.label :social_name %><br>
+    <%= form.label :social_name %>
     <%= form.text_field :social_name %>
   </div>
 
   <div>
-    <%= form.label :birthdate %><br>
+    <%= form.label :birthdate %>
     <%= form.date_field :birthdate %>
   </div>
 
   <div>
-    <%= form.label :description %><br>
+    <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
 
   <div>
-    <%= form.label :educacional_background %><br>
+    <%= form.label :educacional_background %>
     <%= form.text_area :educacional_background %>
   </div>
 
   <div>
-    <%= form.label :experience %><br>
+    <%= form.label :experience %>
     <%= form.text_area :experience %>
   </div>
 
   <div>
-    <%= form.label :country_id %><br>
+    <%= form.label :country_id %>
     <%= form.select :country_id, Country.all.map { |c| [c.acronym, c.id] }  %>
   </div>
 
   <div>
-    <%= form.label :city %><br>
+    <%= form.label :city %>
     <%= form.text_field :city %>
   </div>
 
