--- a/app/views/stars/_star.html.erb
+++ b/app/views/stars/_star.html.erb
@@ -1,9 +1,6 @@
 
 <% if star.headhunter_id == current_headhunter.id %>
-  <p>
-    <%= link_to name_to_exibit(star.profile), profile_path(star.profile.user_id) %><br>
-    <%= Apply.human_attribute_name(:id) %>: <%= link_to star.apply_id, apply_path(star.apply_id) %>
-  </p>
+  <p><%= Apply.model_name.human %>: <%= link_to star.apply_id, apply_path(star.apply_id) %></p>
   <%= button_to I18n.t('delete'), star_path(star),
                               method: :delete,
                               data: { confirm: I18n.t('sure') } %>
