--- a/app/views/applies/_apply.html.erb
+++ b/app/views/applies/_apply.html.erb
@@ -1,6 +1,6 @@
 <p>
   <%= link_to apply do %>
-    <%= Apply.human_attribute_name(:id) %> : <%= apply.id %>
-    - <%= apply.user_email %>
+    <%= Apply.human_attribute_name(:id) %>: <%= apply.id %> - <%= apply.user.email %>
+    - <%= apply.job.title %>
   <% end %>
 </p>
