--- a/app/views/jobs/_applies.html.erb
+++ b/app/views/jobs/_applies.html.erb
@@ -1,5 +1,5 @@
 <% if @job.applies.any? %>
-  <b><%= I18n.t('all_applies') %></b>
+  <p><%= I18n.t('all_applies') %></p>
   <%= render @job.applies %>
   <%= I18n.t('no_applies') if @job.applies.empty? %>
 <% end %>
