--- a/app/views/jobs/_select_status.html.erb
+++ b/app/views/jobs/_select_status.html.erb
@@ -1,4 +1,4 @@
-<h4><%= I18n.t('change_status') %></h4>
+<p><%= I18n.t('change_status') %></p>
 
 <%= button_to I18n.t('published'), published_job_path(@job.id) unless @job.published? %>
 <%= button_to I18n.t('draft'), drafted_job_path(@job.id) unless @job.draft? %>
