--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,9 +4,9 @@
     <div>
       <p><%= I18n.localize(comment.updated_at, format: :short) %></p>
       <p><%= comment.body %></p>
-      <p><%= link_to I18n.t('edit'), edit_profile_comment_path(comment) %></p>
+      <p><%= link_to I18n.t('edit'), edit_profile_comment_path(@profile.id, comment.id) %></p>
       <div>
-        <%= button_to I18n.t('delete'), profile_comment_path(comment), 
+        <%= button_to I18n.t('delete'), profile_comment_path(@profile.id, comment.id),
                                     method: :delete,
                                     data: { confirm: I18n.t('sure') } %>
       </div>
