[51] Adjust controller mail and test

--- a/app/views/profile_mailer/successful_action.html.erb
+++ b/app/views/profile_mailer/successful_action.html.erb
@@ -9,7 +9,7 @@
       You have successfully <%= @action %>.<br>
     </p>
     <p>
-      To continue in Alljobs, just use this link: <%= @url %>.
+      To access this, just use this link: <%= @url %>.
     </p>
     <p>Thanks for using Alljobs and have a great day!</p>
   </body>
