--- a/app/views/profile_mailer/successful_action.text.erb
+++ b/app/views/profile_mailer/successful_action.text.erb
@@ -1,6 +1,6 @@
 Welcome to Alljobs, <%= @profile.name %>
 ===================================================
 You have successfully <%= @action %>.
-To continue in Alljobs, just use this link: <%= @url %>
+To acess this, just use this link: <%= @url %>
 Thanks for using Alljobs and have a great day!
 
