--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -4,7 +4,7 @@
 
 <% if user_signed_in? %>
   <% if @user_applied.present? %>
-    <%= link_to I18n.t('your_apply'), apply_path(@user_applied) %>
+    <%= link_to I18n.t('your_apply'), apply_path(@user_applied.ids) %>
   <% else %>
     <%= link_to I18n.t('to_apply'), applies_path(job_id: @job.id, user_id: current_user.id), method: :post %>
   <% end %>
