--- a/app/views/proposal_comments/index.html.erb
+++ b/app/views/proposal_comments/index.html.erb
@@ -3,4 +3,6 @@
 <%= render @proposal_comments if @proposal_comments.any? %>
 <p><%= I18n.t('no_proposal_comments') if @proposal_comments.empty? %></p>
 
+<p><%= link_to I18n.t('create_comment'), new_apply_proposal_proposal_comment_path(@proposal.apply_id, @proposal.id) %></p>
+
 <%= paginate @proposal_comments %>
