--- a/app/views/proposal_comments/_proposal_comment.html.erb
+++ b/app/views/proposal_comments/_proposal_comment.html.erb
@@ -1,7 +1,9 @@
 <p><%=proposal_comment.author_type%>: <%=I18n.localize(proposal_comment.updated_at, format: :short) %></p>
 <p><%=proposal_comment.body%></p>
 
-<%= link_to I18n.t('edit'), edit_apply_proposal_proposal_comment_path(@proposal.apply_id, @proposal.id, proposal_comment.id) %>
-<%= button_to I18n.t('delete'), apply_proposal_proposal_comment_path(@proposal.apply_id, @proposal.id, proposal_comment.id),
-                                method: :delete,
-                                data: { confirm: I18n.t('sure') } %>
+<% if proposal_comment.author_type == @author_type && proposal_comment.author_id == @author_id %>
+  <%= link_to I18n.t('edit'), edit_apply_proposal_proposal_comment_path(@proposal.apply_id, @proposal.id, proposal_comment.id) %>
+  <%= button_to I18n.t('delete'), apply_proposal_proposal_comment_path(@proposal.apply_id, @proposal.id, proposal_comment.id),
+                                  method: :delete,
+                                  data: { confirm: I18n.t('sure') } %>
+<% end %>
