--- a/app/views/layouts/_show_atributtes.html.erb
+++ b/app/views/layouts/_show_atributtes.html.erb
@@ -6,7 +6,11 @@
     <% elsif attribute == 'country_id' %>
       <dd><%= Country.find(what_to_show.attributes[attribute]).acronym %></dd>
     <% elsif attribute == 'company_id' %>
-      <dd><%= Company.find(what_to_show.attributes[attribute]).name %></dd>  
+      <dd><%= Company.find(what_to_show.attributes[attribute]).name %></dd>
+    <% elsif attribute == 'job_status' %>
+      <dd><%= I18n.t("activerecord.attributes.job.job_statuses.keys.#{what_to_show.attributes[attribute].to_s}") %></dd>
+    <% elsif attribute == 'level' %>
+      <dd><%= I18n.t("activerecord.attributes.job.levels.keys.#{what_to_show.attributes[attribute].to_s}") %></dd>
     <% else %>
       <dd><%= what_to_show.attributes[attribute].to_s %></dd>
     <% end %>
