--- a/app/views/applies/_feedback.html.erb
+++ b/app/views/applies/_feedback.html.erb
@@ -1,12 +1,12 @@
 <% if @apply.errors.any? %>
   <% @apply.errors.full_messages.each do |message|%>
     <p><%= message %></p>
-  <% end %>  
+  <% end %>
 <% end %>
 
 <%= form_with model: apply do |form| %>
  <div>
-    <%= form.label :feedback_headhunter %>
+    <%= form.label :feedback_headhunter %> <br>
     <%= form.text_area :feedback_headhunter %>
  </div>
 
