--- a/app/views/applies/edit.html.erb
+++ b/app/views/applies/edit.html.erb
@@ -1,3 +1,3 @@
-<h3><%= I18n.t('reject') %> <%= Apply.model_name.human %></h3>
+<h3><%= Apply.model_name.human %>: <%= @apply.id %></h3> 
 
-<%= render "reject", apply: @apply %>
+<%= render 'feedback', apply: @apply %>
