feature: create job and apply scopes

--- a/app/views/jobs/search.html.erb
+++ b/app/views/jobs/search.html.erb
@@ -1,4 +1,4 @@
-<h4><%= I18n.t('all_results')%>: <%= @word %></h4>
+<h4><%= I18n.t('all_results')%>: <%= @term %></h4>
 
 <% if @jobs.any? %>
     <p><%= @jobs.count %>  <%= I18n.t('jobs_found') %></p>
