--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,6 +1,29 @@
 <h4><%= @job.title %></h4>
 
-<%= render partial: "layouts/show_atributtes", locals: {what_to_show: @job} %>
+<div>
+    <dt><%= Job.human_attribute_name(:code) %></dt>
+  <dd><%= @job.code %></dd>
+  <dt><%= Job.human_attribute_name(:description) %></dt>
+  <dd><%= @job.description %></dd>
+  <dt><%= Job.human_attribute_name(:skills) %></dt>
+  <dd><%= @job.skills %></dd>
+  <dt><%= Job.human_attribute_name(:salary) %></dt>
+  <dd><%= @job.salary %></dd>
+  <dt><%= Job.human_attribute_name(:level) %></dt>
+  <dd><%= translate_level(@job.level) %></dd>
+  <dt><%= Job.human_attribute_name(:date) %></dt>
+  <dd><%= I18n.l(@job.date, format: :default) %></dd>
+  <dt><%= Job.human_attribute_name(:company_id) %></dt>
+  <dd><%= @job.company.name %></dd>
+  <dt><%= Job.human_attribute_name(:city) %></dt>
+  <dd><%= @job.city %></dd>
+  <dt><%= Job.human_attribute_name(:country_id) %></dt>
+  <dd><%= @job.country.acronym %></dd>
+  <dt><%= Job.human_attribute_name(:job_status) %></dt>
+  <dd><%= translate_job_status(@job.job_status) %></dd>
+  <dt><%= Job.human_attribute_name(:updated_at) %></dt>
+  <dd><%= format_datetime(@job.updated_at) %></dd>
+</div>
 
 <% if user_signed_in? %>
   <% if @user_applied.present? %>
