--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,10 +1,28 @@
 <h4><%= Proposal.model_name.human %> <%= @proposal.id %></h4>
 
 <div>
-  <p><%= link_to "#{Apply.human_attribute_name(:id)}: #{@proposal.apply_id}", apply_path(@proposal.apply_id) %></p> 
-<div>
+  <p>
+    <%= Proposal.human_attribute_name(:user_accepted) %>:
+    <%= translate_user_acceptance(@proposal.user_accepted) %>
+  </p>
+</div>
 
-<%= render partial: "layouts/show_atributtes", locals: {what_to_show: @proposal} %>
+<div>
+  <p><%= link_to "#{Apply.human_attribute_name(:id)}: #{@proposal.apply_id}", apply_path(@proposal.apply_id) %></p>
+</div>
+
+<div>
+  <dt><%= Proposal.human_attribute_name(:salary) %></dt>
+  <dd><%= @proposal.salary %></dd>
+  <dt><%= Proposal.human_attribute_name(:benefits) %>
+  <dd><%= @proposal.benefits %></dd>
+    <dt><%= Proposal.human_attribute_name(:expectations) %></dt>
+  <dd><%= @proposal.expectations %></dd>
+  <dt><%= Proposal.human_attribute_name(:expected_start) %></dt>
+  <dd><%= I18n.l(@proposal.expected_start, format: :default) %></dd>
+  <dt><%= Proposal.human_attribute_name(:updated_at) %></dt>
+  <dd><%= format_datetime(@proposal.updated_at) %></dd>
+</div>
 
 <div>
   <% if headhunter_signed_in? %>
