refact proposal comments controller

--- a/app/views/proposal_comments/_form.html.erb
+++ b/app/views/proposal_comments/_form.html.erb
@@ -5,6 +5,7 @@
 <% end %>
 
 <%= form_with(model: [@apply, @proposal, @proposal_comment]) do |form| %>
+    <%= form.hidden_field :proposal_id, value: @proposal.id %>
     <div>
       <%= form.text_area :body %>
     </div>
